commiting header to reprository

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/7cd4a02f01.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Rolex branding</title>
 </head>
 <body>
-    
+    <header>
+        <span class="logo">Rolex</span>
+        <nav>
+            <a href="#" class="active">Home</a>
+            <a href="#">Services</a>
+            <a href="#">How We Work</a>
+        </nav>
+        <div>
+            <button>Hire Us!</button>
+        </div>
+    </header>
+
 </body>
 </html>
