--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Rolex branding</title>
 </head>
 <body>
-
+     <header>
+        <span class="logo">Rolex</span>
+        <nav>
+            <a href="#" class="active">Home</a>
+            <a href="#">Services</a>
+            <a href="#">How We Work</a>
+        </nav>
+        <div>
+            <button>Hire Us!</button>
+        </div>
+    </header>
     <div class="banner">
         <div class="banner-text">
             <h1>every business <br> strieve to hit  targets!</h1>
