fixed banner btn positioning

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <div class="banner-text">
             <h1>every business <br> strieve to hit  targets!</h1>
             <p>Our business is to put your business before <br>your target audience and to help you hit <br> your set targets and goals.</p>
-            <button class="btn">Hire Us!</button>
+           <div>
+             <button class="btn">Hire Us!</button>
+           </div>
         </div>
         <div class="banner-pix">
             <img src="images/Hero Image.png" alt="">
