created the banner

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/7cd4a02f01.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Rolex branding</title>
 </head>
 <body>
-    
+    <div class="banner">
+        <div class="banner-text">
+            <h1>every business <br> strieve to hit  targets!</h1>
+            <p>Our business is to put your business before <br>your target audience and to help you hit <br> your set targets and goals.</p>
+            <button class="btn">Hire Us!</button>
+        </div>
+        <div class="banner-pix">
+            <img src="images/Hero Image.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
